--- a/.github/workflows/deploy-to-S3.yml
+++ b/.github/workflows/deploy-to-S3.yml
@@ -14,6 +14,8 @@ jobs:
         run: npm install
 
       - name: Build
+        env: 
+          CI: false
         run: npm run build  # React ビルド
 
       - name: Deploy  # S3にデプロイ 
